; ModuleID = '/home/carl/AnghaBench/redis/src/extr_acl.c_addReplyCommandCategories.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_acl.c_addReplyCommandCategories.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.redisCommand = type { i32 }

@ACLCommandCategories = common dso_local global %struct.TYPE_2__* null, align 8
@.str = private unnamed_addr constant [4 x i8] c"@%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @addReplyCommandCategories(i32* %0, %struct.redisCommand* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.redisCommand*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.redisCommand* %1, %struct.redisCommand** %4, align 8
  store i32 0, i32* %5, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i8* @addReplyDeferredLen(i32* %8)
  store i8* %9, i8** %6, align 8
  store i32 0, i32* %7, align 4
  br label %10

10:                                               ; preds = %42, %2
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ACLCommandCategories, align 8
  %12 = load i32, i32* %7, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %45

18:                                               ; preds = %10
  %19 = load %struct.redisCommand*, %struct.redisCommand** %4, align 8
  %20 = getelementptr inbounds %struct.redisCommand, %struct.redisCommand* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ACLCommandCategories, align 8
  %23 = load i32, i32* %7, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = and i32 %21, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %41

30:                                               ; preds = %18
  %31 = load i32*, i32** %3, align 8
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ACLCommandCategories, align 8
  %33 = load i32, i32* %7, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i64 %34
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @addReplyStatusFormat(i32* %31, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %37)
  %39 = load i32, i32* %5, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %5, align 4
  br label %41

41:                                               ; preds = %30, %18
  br label %42

42:                                               ; preds = %41
  %43 = load i32, i32* %7, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %7, align 4
  br label %10

45:                                               ; preds = %10
  %46 = load i32*, i32** %3, align 8
  %47 = load i8*, i8** %6, align 8
  %48 = load i32, i32* %5, align 4
  %49 = call i32 @setDeferredSetLen(i32* %46, i8* %47, i32 %48)
  ret void
}

declare dso_local i8* @addReplyDeferredLen(i32*) #1

declare dso_local i32 @addReplyStatusFormat(i32*, i8*, i32) #1

declare dso_local i32 @setDeferredSetLen(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
